A-2/convertcurrency.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertcurrency
spec:
  replicas: 3
  selector:
    matchLabels:
      app: convertcurrency
  template:
    metadata:
      labels:
        app: convertcurrency
    spec:
      containers:
      - name: convertcurrency
        image: margiibm/cc
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: convertcurrency
spec:
  selector:
    app: convertcurrency
  ports:
  - port: 80
    targetPort: 8080
